---
title: Citeframe Core ER
---
erDiagram
    USERS {
        uuid id PK
        text email
        text name
        timestamptz created_at
    }

    WORKSPACES {
        uuid id PK
        text name
        uuid created_by_user_id FK
        timestamptz archived_at
        timestamptz created_at
    }

    WORKSPACE_MEMBERSHIPS {
        uuid id PK
        uuid workspace_id FK
        uuid user_id FK
        text role
        timestamptz created_at
    }

    WORKSPACE_PROMPT_VERSIONS {
        uuid id PK
        uuid workspace_id FK
        int version_no
        boolean is_current
        uuid created_by_user_id FK
        timestamptz created_at
    }

    DOCUMENTS {
        uuid id PK
        uuid workspace_id FK
        uuid created_by_user_id FK
        text object_key
        text status
        int current_index_version
        timestamptz deleted_at
    }

    DOCUMENT_PAGES {
        uuid id PK
        uuid workspace_id FK
        uuid document_id FK
        int page_number
        int char_count
    }

    DOCUMENT_CHUNKS {
        uuid id PK
        uuid workspace_id FK
        uuid document_id FK
        uuid page_id FK
        int chunk_index
        int index_version
        vector embedding
        int embedding_dimensions
    }

    INGESTION_JOBS {
        uuid id PK
        uuid workspace_id FK
        uuid document_id FK
        text job_type
        text status
        int attempt_count
    }

    CHAT_THREADS {
        uuid id PK
        uuid workspace_id FK
        uuid created_by_user_id FK
        timestamptz last_message_at
    }

    CHAT_MESSAGES {
        uuid id PK
        uuid workspace_id FK
        uuid thread_id FK
        text role
        text status
        uuid prompt_version_id FK
        timestamptz created_at
    }

    MESSAGE_CITATIONS {
        uuid id PK
        uuid workspace_id FK
        uuid message_id FK
        uuid document_id FK
        uuid chunk_id FK
        int citation_index
        int page_number_snapshot
    }

    NOTES {
        uuid id PK
        uuid workspace_id FK
        uuid created_by_user_id FK
        boolean is_pinned
        timestamptz archived_at
    }

    NOTE_SOURCES {
        uuid id PK
        uuid workspace_id FK
        uuid note_id FK
        uuid message_citation_id FK
        int source_order
    }

    TAGS {
        uuid id PK
        uuid workspace_id FK
        text slug
    }

    DOCUMENT_TAGS {
        uuid document_id FK
        uuid tag_id FK
    }

    NOTE_TAGS {
        uuid note_id FK
        uuid tag_id FK
    }

    USERS ||--o{ WORKSPACE_MEMBERSHIPS : joins
    WORKSPACES ||--o{ WORKSPACE_MEMBERSHIPS : has
    USERS ||--o{ WORKSPACES : creates
    WORKSPACES ||--o{ WORKSPACE_PROMPT_VERSIONS : versions

    WORKSPACES ||--o{ DOCUMENTS : owns
    USERS ||--o{ DOCUMENTS : uploads
    DOCUMENTS ||--o{ DOCUMENT_PAGES : has
    DOCUMENT_PAGES ||--o{ DOCUMENT_CHUNKS : splits_into
    DOCUMENTS ||--o{ INGESTION_JOBS : processed_by

    WORKSPACES ||--o{ CHAT_THREADS : owns
    USERS ||--o{ CHAT_THREADS : starts
    CHAT_THREADS ||--o{ CHAT_MESSAGES : contains
    WORKSPACE_PROMPT_VERSIONS ||--o{ CHAT_MESSAGES : used_by
    CHAT_MESSAGES ||--o{ MESSAGE_CITATIONS : cites
    DOCUMENTS ||--o{ MESSAGE_CITATIONS : sourced_from
    DOCUMENT_CHUNKS ||--o{ MESSAGE_CITATIONS : sourced_from

    WORKSPACES ||--o{ NOTES : owns
    USERS ||--o{ NOTES : writes
    NOTES ||--o{ NOTE_SOURCES : cites
    MESSAGE_CITATIONS ||--o{ NOTE_SOURCES : source_for

    WORKSPACES ||--o{ TAGS : defines
    DOCUMENTS ||--o{ DOCUMENT_TAGS : tagged
    TAGS ||--o{ DOCUMENT_TAGS : applied_to
    NOTES ||--o{ NOTE_TAGS : tagged
    TAGS ||--o{ NOTE_TAGS : applied_to
